chore: update accent color

--- a/app/global.css
+++ b/app/global.css
@@ -6,11 +6,12 @@
 }
 
 ::selection {
-  background-color: #47a3f3;
+  background-color: #98a9f4;
   color: #fefefe;
 }
 
 :root {
+  accent-color: #98a9f4;
   --sh-class: #2d5e9d;
   --sh-identifier: #354150;
   --sh-sign: #8996a3;
