Playground: native mobile/desktop UX, sticky composer, iOS momentum; API: require inline code snippets

--- a/app/global.css
+++ b/app/global.css
@@ -60,6 +60,15 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.touch-manipulation {
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.ios-momentum {
+  -webkit-overflow-scrolling: touch;
+}
+
 
 /* Global link color uses the accent token */
 a { color: var(--color-accent); }
